fixing the background image's alignment.

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,10 @@ body {
 }
 
 img {
-    height: 100vmax;
-    width: auto;
-    object-fit: contain;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100vmax;
 }
 
 .clock {
